; ModuleID = '/home/carl/AnghaBench/php-src/ext/gd/libgd/extr_gd_wbmp.c_gdImageCreateFromWBMPCtx.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/gd/libgd/extr_gd_wbmp.c_gdImageCreateFromWBMPCtx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i64* }

@gd_getin = common dso_local global i32 0, align 4
@WBMP_WHITE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @gdImageCreateFromWBMPCtx(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_4__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32* null, i32** %5, align 8
  %11 = load i32*, i32** %3, align 8
  %12 = call i64 @readwbmp(i32* @gd_getin, i32* %11, %struct.TYPE_4__** %4)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %1
  store i32* null, i32** %2, align 8
  br label %80

15:                                               ; preds = %1
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = call i32* @gdImageCreate(i32 %18, i32 %21)
  store i32* %22, i32** %5, align 8
  %23 = icmp ne i32* %22, null
  br i1 %23, label %27, label %24

24:                                               ; preds = %15
  %25 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %26 = call i32 @freewbmp(%struct.TYPE_4__* %25)
  store i32* null, i32** %2, align 8
  br label %80

27:                                               ; preds = %15
  %28 = load i32*, i32** %5, align 8
  %29 = call i32 @gdImageColorAllocate(i32* %28, i32 255, i32 255, i32 255)
  store i32 %29, i32* %7, align 4
  %30 = load i32*, i32** %5, align 8
  %31 = call i32 @gdImageColorAllocate(i32* %30, i32 0, i32 0, i32 0)
  store i32 %31, i32* %6, align 4
  store i32 0, i32* %10, align 4
  store i32 0, i32* %9, align 4
  br label %32

32:                                               ; preds = %73, %27
  %33 = load i32, i32* %9, align 4
  %34 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %35 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %34, i32 0, i32 1
  %36 = load i32, i32* %35, align 4
  %37 = icmp slt i32 %33, %36
  br i1 %37, label %38, label %76

38:                                               ; preds = %32
  store i32 0, i32* %8, align 4
  br label %39

39:                                               ; preds = %69, %38
  %40 = load i32, i32* %8, align 4
  %41 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %42 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 8
  %44 = icmp slt i32 %40, %43
  br i1 %44, label %45, label %72

45:                                               ; preds = %39
  %46 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %47 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %46, i32 0, i32 2
  %48 = load i64*, i64** %47, align 8
  %49 = load i32, i32* %10, align 4
  %50 = add nsw i32 %49, 1
  store i32 %50, i32* %10, align 4
  %51 = sext i32 %49 to i64
  %52 = getelementptr inbounds i64, i64* %48, i64 %51
  %53 = load i64, i64* %52, align 8
  %54 = load i64, i64* @WBMP_WHITE, align 8
  %55 = icmp eq i64 %53, %54
  br i1 %55, label %56, label %62

56:                                               ; preds = %45
  %57 = load i32*, i32** %5, align 8
  %58 = load i32, i32* %8, align 4
  %59 = load i32, i32* %9, align 4
  %60 = load i32, i32* %7, align 4
  %61 = call i32 @gdImageSetPixel(i32* %57, i32 %58, i32 %59, i32 %60)
  br label %68

62:                                               ; preds = %45
  %63 = load i32*, i32** %5, align 8
  %64 = load i32, i32* %8, align 4
  %65 = load i32, i32* %9, align 4
  %66 = load i32, i32* %6, align 4
  %67 = call i32 @gdImageSetPixel(i32* %63, i32 %64, i32 %65, i32 %66)
  br label %68

68:                                               ; preds = %62, %56
  br label %69

69:                                               ; preds = %68
  %70 = load i32, i32* %8, align 4
  %71 = add nsw i32 %70, 1
  store i32 %71, i32* %8, align 4
  br label %39

72:                                               ; preds = %39
  br label %73

73:                                               ; preds = %72
  %74 = load i32, i32* %9, align 4
  %75 = add nsw i32 %74, 1
  store i32 %75, i32* %9, align 4
  br label %32

76:                                               ; preds = %32
  %77 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %78 = call i32 @freewbmp(%struct.TYPE_4__* %77)
  %79 = load i32*, i32** %5, align 8
  store i32* %79, i32** %2, align 8
  br label %80

80:                                               ; preds = %76, %24, %14
  %81 = load i32*, i32** %2, align 8
  ret i32* %81
}

declare dso_local i64 @readwbmp(i32*, i32*, %struct.TYPE_4__**) #1

declare dso_local i32* @gdImageCreate(i32, i32) #1

declare dso_local i32 @freewbmp(%struct.TYPE_4__*) #1

declare dso_local i32 @gdImageColorAllocate(i32*, i32, i32, i32) #1

declare dso_local i32 @gdImageSetPixel(i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
